--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Kulinaria</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   </head>
   <body>
       <header>
