--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Kulinaria</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="croppie.css" />
+  <script src="croppie.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
   </head>
   <body>
