--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           Sposób wykonania
             <textarea name="steps"></textarea>
           </label>
-          <div class="enter"><input type="button" class="Gray" type="submit" value="Dodaj"></input></div>
+          <div class="enter"><input type="button" class="Gray" type="submit" value="Dodaj" onclick="onSubmit()"></input></div>
         </form>
     </section>
     
